--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -10,6 +10,8 @@
     <table style="width:100%">
       <tr><th colspan="3"><%= l(:shortcuts_help_common) %></th></tr>
       <tr><th><td style="width:50%;">S</td><td style="width:50%;"><%= l(:shortcuts_help_search) %></td></tr>
+      <tr><th><td style="width:50%;">M</td><td style="width:50%;"><%= l(:shortcuts_help_mypage) %></td></tr>
+      <tr><th><td style="width:50%;">P</td><td style="width:50%;"><%= l(:shortcuts_help_projects) %></td></tr>
     </table>
     <table style="width:100%">
       <tr><th colspan="3"><%= l(:shortcuts_help_issue_index) %></th></tr>
