--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -12,7 +12,9 @@
       <tr><th><td style="width:50%;">S</td><td style="width:50%;"><%= l(:shortcuts_help_search) %></td></tr>
       <tr><th><td style="width:50%;">M</td><td style="width:50%;"><%= l(:shortcuts_help_goto_mypage) %></td></tr>
       <tr><th><td style="width:50%;">P</td><td style="width:50%;"><%= l(:shortcuts_help_goto_projects) %></td></tr>
-      <tr><th><td style="width:50%;">I</td><td style="width:50%;"><%= l(:shortcuts_help_goto_issue_index) %></td></tr>
+      <tr><th><td style="width:50%;">I</td><td style="width:50%;"><%= l(:shortcuts_help_activate_index_tab) %></td></tr>
+      <tr><th><td style="width:50%;">J</td><td style="width:50%;"><%= l(:shortcuts_help_goto_new_issue) %></td></tr>
+      <tr><th><td style="width:50%;">L</td><td style="width:50%;"><%= l(:shortcuts_help_goto_issue_index) %></td></tr>
     </table>
     <table style="width:100%">
       <tr><th colspan="3"><%= l(:shortcuts_help_issue_index) %></th></tr>
