Revise help text

--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -10,8 +10,8 @@
 
     <table style="width:100%">
       <tr><th colspan="3"><%= l(:shortcuts_help_guiding_text) %></th></tr>
-      <tr><th><td style="width:50%;">On Windows, press [Alt] + [access key]</td><td style="width:100%;"></tr>
-      <tr><th><td style="width:50%;">On Mac OS, press [Control + Option] + [access key]</td><td style="width:50%;"><%= l(:shortcuts_help_activate_index_tab) %></td></tr>
+      <tr><th><td style="width:100%;">On Windows, press [Alt] + [access key]</td></tr>
+      <tr><th><td style="width:100%;">On Mac OS, press [Control + Option] + [access key]</td></tr>
     </table>
 
     <table style="width:100%">
