Revise help text

--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -10,8 +10,8 @@
 
     <table style="width:100%">
       <tr><th colspan="3"><%= l(:shortcuts_help_guiding_text) %></th></tr>
-      <tr><th><td style="width:100%;">On Windows, press [Alt] + [access key]</td></tr>
-      <tr><th><td style="width:100%;">On Mac OS, press [Control + Option] + [access key]</td></tr>
+      <tr><th><td style="width:40%;">On Windows</td><td style="width:60%;">Press [Alt] + [access key]</td></tr>
+      <tr><th><td style="width:40%;">On Mac OS</td><td style="width:60%;">press [Control + Option] + [access key]</td></tr>
     </table>
 
     <table style="width:100%">
