--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -9,38 +9,38 @@
     <h1><%= l(:shortcuts_help_title) %></h1>
 
     <table style="width:100%">
-      <tr><th colspan="3"><%= l(:shortcuts_help_guiding_text) %></th></tr>
-      <tr><th><td style="width:40%;">On Windows</td><td style="width:60%;">Press [Alt] + [access key]</td></tr>
-      <tr><th><td style="width:40%;">On Mac OS</td><td style="width:60%;">press [Control + Option] + [access key]</td></tr>
+      <tr><th colspan="3"><%= l(:shortcuts_help_access_key) %></th></tr>
+      <tr><th><td style="width:40%;">On Windows</td><td style="width:60%;">ALT + [Access key]</td></tr>
+      <tr><th><td style="width:40%;">On Mac OS</td><td style="width:60%;">CTRL + OPTION + [Access key]</td></tr>
     </table>
 
     <table style="width:100%">
       <tr><th colspan="3"><%= l(:shortcuts_help_common) %></th></tr>
-      <tr><th><td style="width:50%;">S</td><td style="width:50%;"><%= l(:shortcuts_help_search) %></td></tr>
-      <tr><th><td style="width:50%;">M</td><td style="width:50%;"><%= l(:shortcuts_help_goto_mypage) %></td></tr>
-      <tr><th><td style="width:50%;">P</td><td style="width:50%;"><%= l(:shortcuts_help_goto_projects) %></td></tr>
-      <tr><th><td style="width:50%;">L</td><td style="width:50%;"><%= l(:shortcuts_help_goto_issue_index) %></td></tr>
-      <tr><th><td style="width:50%;">N</td><td style="width:50%;"><%= l(:shortcuts_help_goto_new_issue) %></td></tr>
+      <tr><th><td style="width:40%;">S</td><td style="width:60%;"><%= l(:shortcuts_help_search) %></td></tr>
+      <tr><th><td style="width:40%;">M</td><td style="width:60%;"><%= l(:shortcuts_help_goto_mypage) %></td></tr>
+      <tr><th><td style="width:40%;">P</td><td style="width:60%;"><%= l(:shortcuts_help_goto_projects) %></td></tr>
+      <tr><th><td style="width:40%;">L</td><td style="width:60%;"><%= l(:shortcuts_help_goto_issue_index) %></td></tr>
+      <tr><th><td style="width:40%;">N</td><td style="width:60%;"><%= l(:shortcuts_help_goto_new_issue) %></td></tr>
     </table>
     <table style="width:100%">
       <tr><th colspan="3"><%= l(:shortcuts_help_projects) %></th></tr>
-      <tr><th><td style="width:50%;">I</td><td style="width:50%;"><%= l(:shortcuts_help_activate_index_tab) %></td></tr>
-      <tr><th><td style="width:50%;">Access key [7]</td><td style="width:50%;"><%= l(:shortcuts_help_activate_index_tab) %></td></tr>
+      <tr><th><td style="width:40%;">I</td><td style="width:60%;"><%= l(:shortcuts_help_activate_index_tab) %></td></tr>
+      <tr><th><td style="width:40%;">Access key [7]</td><td style="width:60%;"><%= l(:shortcuts_help_activate_index_tab) %></td></tr>
     </table>
     <table style="width:100%">
       <tr><th colspan="3"><%= l(:shortcuts_help_issue_show) %></th></tr>
-      <tr><th><td style="width:50%;">C</td><td style="width:50%;"><%= l(:shortcuts_help_copy_issue) %></td></tr>
-      <tr><th><td style="width:50%;">D</td><td style="width:50%;"><%= l(:shortcuts_help_delete_issue) %></td></tr>
-      <tr><th><td style="width:50%;">E</td><td style="width:50%;"><%= l(:shortcuts_help_edit_issue) %></td></tr>
-      <tr><th><td style="width:50%;">L</td><td style="width:50%;"><%= l(:shortcuts_help_log_time_issue) %></td></tr>
-      <tr><th><td style="width:50%;">Q</td><td style="width:50%;"><%= l(:shortcuts_help_quote_issue) %></td></tr>
-      <tr><th><td style="width:50%;">U</td><td style="width:50%;"><%= l(:shortcuts_help_unwatch_issue) %></td></tr>
-      <tr><th><td style="width:50%;">W</td><td style="width:50%;"><%= l(:shortcuts_help_watch_issue) %></td></tr>
+      <tr><th><td style="width:40%;">C</td><td style="width:60%;"><%= l(:shortcuts_help_copy_issue) %></td></tr>
+      <tr><th><td style="width:40%;">D</td><td style="width:60%;"><%= l(:shortcuts_help_delete_issue) %></td></tr>
+      <tr><th><td style="width:40%;">E</td><td style="width:60%;"><%= l(:shortcuts_help_edit_issue) %></td></tr>
+      <tr><th><td style="width:40%;">L</td><td style="width:60%;"><%= l(:shortcuts_help_log_time_issue) %></td></tr>
+      <tr><th><td style="width:40%;">Q</td><td style="width:60%;"><%= l(:shortcuts_help_quote_issue) %></td></tr>
+      <tr><th><td style="width:40%;">U</td><td style="width:60%;"><%= l(:shortcuts_help_unwatch_issue) %></td></tr>
+      <tr><th><td style="width:40%;">W</td><td style="width:60%;"><%= l(:shortcuts_help_watch_issue) %></td></tr>
     </table>
     <% if @text_formatting == 'textile' || @text_formatting == 'markdown' || @text_formatting == 'common_mark' %>
     <table style="width:100%">
       <tr><th colspan="3"><%= l(:shortcuts_help_editor) %></th></tr>
-      <tr><th><%= image_tag 'bt_strong.png', :plugin => 'redmine_shortcuts', :alt => 'Strong', :style => 'border: 1px solid #bbb;' %></th><td style="width:50%;">CTRL + B</td><td style="width:50%;"><strong><%= l(:shortcuts_help_strong) %></strong></td></tr>
+      <tr><th><%= image_tag 'bt_strong.png', :plugin => 'redmine_shortcuts', :alt => 'Strong', :style => 'border: 1px solid #bbb;' %></th><td style="width:40%;">CTRL + B</td><td style="width:60%;"><strong><%= l(:shortcuts_help_strong) %></strong></td></tr>
       <tr><th><%= image_tag 'bt_em.png', :plugin => 'redmine_shortcuts', :alt => 'Italic', :style => 'border: 1px solid #bbb;' %></th><td>CTRL + I</td><td><em><%= l(:shortcuts_help_italic) %></em></td></tr>
       <% if @text_formatting != 'common_mark' %>
       <tr><th><%= image_tag 'bt_ins.png', :plugin => 'redmine_shortcuts', :alt => 'Underline', :style => 'border: 1px solid #bbb;' %></th><td>CTRL + U</td><td><ins><%= l(:shortcuts_help_underline) %></ins></td></tr>
