Change go to issues (all projects) to use K as shortcut key

--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -19,7 +19,7 @@
       <tr><th><td style="width:40%;">S</td><td style="width:60%;"><%= l(:shortcuts_help_search) %></td></tr>
       <tr><th><td style="width:40%;">M</td><td style="width:60%;"><%= l(:shortcuts_help_goto_mypage) %></td></tr>
       <tr><th><td style="width:40%;">P</td><td style="width:60%;"><%= l(:shortcuts_help_goto_projects) %></td></tr>
-      <tr><th><td style="width:40%;">L</td><td style="width:60%;"><%= l(:shortcuts_help_goto_issue_index) %></td></tr>
+      <tr><th><td style="width:40%;">K</td><td style="width:60%;"><%= l(:shortcuts_help_goto_issue_index) %></td></tr>
       <tr><th><td style="width:40%;">N</td><td style="width:60%;"><%= l(:shortcuts_help_goto_new_issue) %></td></tr>
     </table>
     <table style="width:100%">
